--- a/images/icomoon/demo-external-svg.html
+++ b/images/icomoon/demo-external-svg.html
@@ -17,6 +17,11 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-menu-hamburger"><use xlink:href="symbol-defs.svg#icon-menu-hamburger"></use></svg><span class="name"> icon-menu-hamburger</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-Vector"><use xlink:href="symbol-defs.svg#icon-Vector"></use></svg><span class="name"> icon-Vector</span>
             </div>
         </div>
