--- a/index.html
+++ b/index.html
@@ -25,6 +25,57 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 						WEB
 						<span style="color: #2e2f42">STUDIO</span>
 					</a>
+					<button class="nav-button js-open-menu">
+						<svg class="nav-button-item"><use href="./images/icons.svg#icon-menu-hamburger"></use></svg>
+					</button>
+					<div class="menu-wrapper js-menu-container">
+						<button class="menu-button js-close-menu">
+							<svg class="nav-button-item"><use href="./images/icons.svg#icon-close-black"></use></svg>
+						</button>
+						<menu class="menu">
+							<li><a class="menu-mobile-link-items-current" href="./index.html">Studio</a></li>
+							<li><a class="menu-mobile-link-items" href="./portfolio.html">Portfolio</a></li>
+							<li><a class="menu-mobile-link-items" href="#">Contacts</a></li>
+						</menu>
+						<address>
+							<ul class="">
+								<li>
+									<a class="address-link-items address-link-phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+								</li>
+								<li>
+									<a class="address-link-items address-link-mail" href="mailto:info@devstudio.com">
+										info@devstudio.com
+									</a>
+								</li>
+							</ul>
+						</address>
+						<ul class="menu-mobile-media">
+							<li class="icon-media-round">
+								<a href="#"></a>
+								<svg class="main-team-media-items">
+									<use href="./images/icons.svg#icon-instagram-2"></use>
+								</svg>
+							</li>
+							<li class="icon-media-round">
+								<a href="#"></a>
+								<svg class="main-team-media-items">
+									<use href="./images/icons.svg#icon-twitter-1"></use>
+								</svg>
+							</li>
+							<li class="icon-media-round">
+								<a href="#"></a>
+								<svg class="main-team-media-items">
+									<use href="./images/icons.svg#icon-facebook-1"></use>
+								</svg>
+							</li>
+							<li class="icon-media-round">
+								<a href="#"></a>
+								<svg class="main-team-media-items">
+									<use href="./images/icons.svg#icon-linkedin-1"></use>
+								</svg>
+							</li>
+						</ul>
+					</div>
 					<ul class="menu-link">
 						<li>
 							<a class="menu-link-items-current" href="./index.html">Studio</a>
@@ -116,10 +167,12 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-1"></use>
 								</svg>
 							</div>
-							<h3 class="main-content-list">Strategy</h3>
-							<p class="main-content-items">
-								Our goal is to identify the business problem to walk away with the perfect and creative solution.
-							</p>
+							<div class="values-column">
+								<h3 class="main-content-list">Strategy</h3>
+								<p class="main-content-items">
+									Our goal is to identify the business problem to walk away with the perfect and creative solution.
+								</p>
+							</div>
 						</li>
 						<li>
 							<div class="main-content-icons">
@@ -127,10 +180,12 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-2"></use>
 								</svg>
 							</div>
-							<h3 class="main-content-list">Punctuality</h3>
-							<p class="main-content-items">
-								Bring the key message to the brand's audience for the best price within the shortest possible time.
-							</p>
+							<div class="values-column">
+								<h3 class="main-content-list">Punctuality</h3>
+								<p class="main-content-items">
+									Bring the key message to the brand's audience for the best price within the shortest possible time.
+								</p>
+							</div>
 						</li>
 						<li>
 							<div class="main-content-icons">
@@ -138,10 +193,12 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-3"></use>
 								</svg>
 							</div>
-							<h3 class="main-content-list">Diligence</h3>
-							<p class="main-content-items">
-								Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-							</p>
+							<div class="values-column">
+								<h3 class="main-content-list">Diligence</h3>
+								<p class="main-content-items">
+									Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+								</p>
+							</div>
 						</li>
 						<li>
 							<div class="main-content-icons">
@@ -149,10 +206,12 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-4"></use>
 								</svg>
 							</div>
-							<h3 class="main-content-list">Technologies</h3>
-							<p class="main-content-items">
-								Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-							</p>
+							<div class="values-column">
+								<h3 class="main-content-list">Technologies</h3>
+								<p class="main-content-items">
+									Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+								</p>
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -428,5 +487,6 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 			</div>
 		</footer>
 		<script src="./js/modal.js"></script>
+		<script src="./js/mobile-menu.js"></script>
 	</body>
 </html>
