--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 	<body>
 		<header>
 			<div class="container header-wrapper">
+				<button class="nav-button js-open-menu">
+					<svg class="nav-button-item"><use href="./images/icons.svg#icon-menu-hamburger"></use></svg>
+				</button>
 				<nav class="header-navigation">
 					<a class="logo" href="./index.html">
 						WEB
 						<span style="color: #2e2f42">STUDIO</span>
 					</a>
-					<button class="nav-button js-open-menu">
-						<svg class="nav-button-item"><use href="./images/icons.svg#icon-menu-hamburger"></use></svg>
-					</button>
+
 					<div class="menu-wrapper js-menu-container">
 						<button class="menu-button js-close-menu">
 							<svg class="nav-button-item"><use href="./images/icons.svg#icon-close-black"></use></svg>
@@ -38,7 +39,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 							<li><a class="menu-mobile-link-items" href="#">Contacts</a></li>
 						</menu>
 						<address>
-							<ul class="">
+							<ul>
 								<li>
 									<a class="address-link-items address-link-phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
 								</li>
@@ -167,7 +168,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-1"></use>
 								</svg>
 							</div>
-							<div class="values-column">
+							<div>
 								<h3 class="main-content-list">Strategy</h3>
 								<p class="main-content-items">
 									Our goal is to identify the business problem to walk away with the perfect and creative solution.
@@ -180,7 +181,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-2"></use>
 								</svg>
 							</div>
-							<div class="values-column">
+							<div>
 								<h3 class="main-content-list">Punctuality</h3>
 								<p class="main-content-items">
 									Bring the key message to the brand's audience for the best price within the shortest possible time.
@@ -193,7 +194,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 									<use href="./images/icons.svg#icon-Icon-3"></use>
 								</svg>
 							</div>
-							<div class="values-column">
+							<div>
 								<h3 class="main-content-list">Diligence</h3>
 								<p class="main-content-items">
 									Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
@@ -486,6 +487,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 				</div>
 			</div>
 		</footer>
+		-->
 		<script src="./js/modal.js"></script>
 		<script src="./js/mobile-menu.js"></script>
 	</body>
