--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 						<li>
 							<img
 								src="images/MarkGuerrero.jpg"
+								srcset="images/MarkGuerrero2x.jpg 2x"
 								alt="smiling gently bearded man wearing a shirt"
 								width="264"
 								height="260"
@@ -284,6 +285,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 						<li>
 							<img
 								src="images/TomFord.jpg"
+								srcset="images/TomFord2x.jpg 2x"
 								alt="broadly smiling man in shirt looking to the side"
 								width="264"
 								height="260"
@@ -320,7 +322,13 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 							</div>
 						</li>
 						<li>
-							<img src="images/CamilaGarcia.jpg" alt="dark-haired girl smiling softly" width="264" height="260" />
+							<img
+								src="images/CamilaGarcia.jpg"
+								srcset="images/CamilaGarcia2x.jpg 2x"
+								alt="dark-haired girl smiling softly"
+								width="264"
+								height="260"
+							/>
 							<div class="main-team-card-items">
 								<h3 class="main-team-names">Camila Garcia</h3>
 								<p class="main-team-names-description">Marketing</p>
@@ -353,7 +361,13 @@ https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
 							</div>
 						</li>
 						<li>
-							<img src="images/DanielWilson.jpg" alt="smiling bearded man wearing a T-shirt" width="264" height="260" />
+							<img
+								src="images/DanielWilson.jpg"
+								srcset="images/DanielWilson2x.jpg 2x"
+								alt="smiling bearded man wearing a T-shirt"
+								width="264"
+								height="260"
+							/>
 							<div class="main-team-card-items">
 								<h3 class="main-team-names">Daniel Wilson</h3>
 								<p class="main-team-names-description">UI Designer</p>
